--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -527,7 +527,7 @@ mutual_difference(occgen95, occgen2000, "Gender","OccMinor",weight="Number",
 #> 6: group_marginal  2.727083e-03 2.613274e-04   0.002271945,0.003253979 -9.003382e-05
 #> 7:  unit_marginal -1.147215e-03 2.602473e-04 -0.001657271,-0.000686574  9.239236e-05
 #> 8:     structural -4.701409e-03 8.364964e-05 -0.004863429,-0.004536118  3.211939e-06</code></pre>
-<p>These results show a small (1.6%) yest significant decrease in segregation. Marginal increases in 
+<p>These results show a small (1.6%) yet significant decrease in segregation. Marginal increases in 
 the share of women in the workforce produced an increase in segregation which was more than offset 
 by structural decreases in segregation within occupations.</p>
 <p>This completes this walkthrough. Now on to Tsukuba data.</p>
