add harmonizing page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@ using Japanese population census data</a></h4>
 that steps through the main features of his package. This basic walkthrough uses data on occupation versus gender from 
 the 1995 and 2000 Japan Population Censuses.</p>
 </li>
+<li>
+<h4>Expand occupation vs gender analysis to include 2005 population census data</h4>
+<p>The Statistics Bureau of Japan (SBJ) provides occupation vs gender data from 1995 and 2000 population censuses 
+in combined tables that have national totals only. Released data for the 2005 population censuses additionally details 
+this data by prefecture and a few major cities. It doesn't get us to Tsukuba, but at it does let us look at Ibaraki 
+prefecture. In addition, the data breaks out occupations by whether the respondents are self-employed, employed in family 
+businesses, and employed by others. This may be useful in looking a occupations in which free-lancing and other forms 
+of self-employment are of interest.</p>
+<ol>
+<li>
+<h4><a href="basic/Harmonizing_1995_2000_2005_occupation_data.html">Harmonizing 1995, 2000 and 2005 occupation classifications</a></h4>
+<p>The occupational classification used in the 2005 population census is slightly different from that used for the 1995 
+and 2000 censuses. These must be harmonized before they can be compared using Elbers's R package.</p>
+</li>
+</ol>
+</li>
 </ol>
 </main>
 <div id="references" class="section level2">
