add duncan walkthrough page

--- a/basic/Harmonizing_1985_2005_occupation_data.html
+++ b/basic/Harmonizing_1985_2005_occupation_data.html
@@ -4,7 +4,7 @@
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="revised" content="15 November 2021" />
-        <title>Harmonizing 1995, 2000 and 2005 occupation classifications</title>
+        <title>Harmonizing 1985-2005 occupation classifications</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
         <link rel="stylesheet" href="https://alanintsukuba.github.io/ShowReferencesModal.css"> 
@@ -15,11 +15,11 @@ integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="ano
 integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]-->    
 </head>
 <body>
-<h1>Harmonizing 1995, 2000 and 2005 occupation classifications</h1>
+<h1>Harmonizing 1985-2005 occupation classifications</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-19 November 2021</p>
+23 November 2021</p>
 <main>
-<p>The occupational classification used in the 2005 population census is slightly different from that used for the 1995 
-and 2000 censuses. These must be harmonized before they can be compared using Elbers's R package.</p>
+<p>The occupational classifications used in the 1985, 1990, 1995, 2000 and 2005 population censuses 
+are slightly different. </p>
 </main>
 </html>
