--- a/basic/OccupationGenderDuncanWalkthrough.html
+++ b/basic/OccupationGenderDuncanWalkthrough.html
@@ -20,5 +20,14 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 23 November 2021</p>
 <main>
 </main>
-</body>
+<div id="references" class="section level2">
+<h2 class="hasAnchor">
+<a href="#references" class="anchor"></a>References</h2>
+<p>Duncan O. D. and Duncan B. (1955) A Methodological Analysis of Segregation Indexes. 
+American Sociological Review 41, pp. 210-217 <a href="https://www.jstor.org/stable/2088328" 
+class="uri" target="blank">https://www.jstor.org/stable/2088328</a></p>
+<p>Uchikoshi, Fumiya, Ryota Mugiyama, and Megumi Oguro. (2020) "Still Separate in STEM?: 
+Trends in Sex Segregation by Field of Study in Japan, 1975-2019." 
+<a href="https://osf.io/txqka/download" class="uri" target="blank">https://osf.io/txqka/download</a></p>
+</div></body>
 </html>
