--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 <ol><li>
 <h4><a href="basic/OccupationGenderWalkthrough01.html">Basic walkthrough of Elbers's segregation package 
 using Japanese population census data</a></h4>
-<p>Elbers's R package "segregation" contains a detailed vignette (https://elbersb.github.io/segregation/articles/segregation.html) 
+<p>Elbers's R package "segregation" contains a detailed vignette 
+(https://elbersb.github.io/segregation/articles/segregation.html) 
 that steps through the main features of his package. This basic walkthrough uses data on occupation versus gender from 
 the 1995 and 2000 Japan Population Censuses.</p>
 </li>
-<li></li>
+<li><h4><a href="basic/OccupationGenderDuncanWalkthrough.html">Basic walkthrough of Duncan dissimilarity 
+index using OasisR package</a></h4>
+<p>The Duncan dissimilarity index is the most widely use segregation measure in sociology and is used 
+in recently published research on occupation and gender in Japan (Uchikoshi and Mugiyama, 2020).</p></li>
 </ol>
 </li>
 <li>
@@ -52,7 +56,26 @@ and 2000 censuses. These must be harmonized before they can be compared using El
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
 <a href="#references" class="anchor"></a>References</h2>
-<p>Elbers, B. (2021). A Method for Studying Differences in Segregation Across Time and Space. Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" class="uri">https://doi.org/10.1177/0049124121986204</a></p>
+<p>Duncan, Otis Dudley and Duncan, Beverly (1955) A Methodological Analysis of Segregation Indexes.
+American Sociological Review, 20（2）, pp.210–217. 
+<a href="https://www.jstor.org/stable/2088328" class="uri">https://www.jstor.org/stable/2088328</a></p>
+<p>Elbers, B. (2021). A Method for Studying Differences in Segregation Across Time and Space. 
+Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
+class="uri">doi:10.1177/0049124121986204</a></p>
+<p>Uchikoshi, Fumiya, Ryota Mugiyama. Trends in Occupational Sex Segregation in Japan: A Decomposition Analysis of Census Data, 1980-2005. 
+Japanese Journal of Population Studies. 2020. 56. 9-23 
+<a href="https://doi.org/10.24454/jps.1901001" class="uri">https://doi.org/10.24454/jps.1901001</a></p>
+<p>Uchikoshi, Fumiya, Mugiyama, Ryota, Komatsu, Kyoko. 2020. 
+“Labor Market Gender Gap Focusing on Occupational Segregation and Skill Devaluation: 
+Evidence from Matched Data of Japanese O-NET and Census.” Discussion Paper Series 713. 
+Tokyo, Japan: Institute of Economic Research, Hitotsubashi University. 
+<a href="https://hermes-ir.lib.hit-u.ac.jp/hermes/ir/re/31323/DP713.pdf" 
+class="uri">https://hermes-ir.lib.hit-u.ac.jp/hermes/ir/re/31323/DP713.pdf</a></p>
+<p>Ueno, Koji. “Gender-Stratified Labor Market, Heterosexual Marriage Expectation, and 
+LGBQ Young Adults’ Career Plans in Contemporary Japan.” 
+Socius, Jan. 2021, <a href="https://doi.org/10.1177/23780231211052807" 
+class="uri">doi:10.1177/23780231211052807</a>.
+</p>
 </div>
 </body>
 </html>
