--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@ American Sociological Review, 20（2）, pp.210–217.
 <a href="https://www.jstor.org/stable/2088328" class="uri">https://www.jstor.org/stable/2088328</a></p>
 <p>Elbers, B. (2021). A Method for Studying Differences in Segregation Across Time and Space. 
 Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
-class="uri">doi:10.1177/0049124121986204</a></p>
-<p>Uchikoshi, Fumiya, Ryota Mugiyama. Trends in Occupational Sex Segregation in Japan: A Decomposition Analysis of Census Data, 1980-2005. 
+class="uri">doi:10.18637/jss.v089.i07</a></p>
+<p>Tivadar, Mihai (2019) OasisR: An R Package to Bring some Order to the World of Segregation Measurement. 
+  Journal of Statistical Software, vol. 89, no. 7, 2019, pp. 1-39. <a href="https://doi.org/10.18637/jss.v089.i07" 
+  class="uri">doi:10.1177/0049124121986204</a></p>
+<p>Uchikoshi, Fumiya, Ryota Mugiyama. Trends in Occupational Sex Segregation in Japan: 
+  A Decomposition Analysis of Census Data, 1980-2005. 
 Japanese Journal of Population Studies. 2020. 56. 9-23 
 <a href="https://doi.org/10.24454/jps.1901001" class="uri">https://doi.org/10.24454/jps.1901001</a></p>
 <p>Uchikoshi, Fumiya, Mugiyama, Ryota, Komatsu, Kyoko. 2020. 
