--- a/basic/OccupationGenderDuncanWalkthrough.html
+++ b/basic/OccupationGenderDuncanWalkthrough.html
@@ -26,6 +26,9 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p>Duncan O. D. and Duncan B. (1955) A Methodological Analysis of Segregation Indexes. 
 American Sociological Review 41, pp. 210-217 <a href="https://www.jstor.org/stable/2088328" 
 class="uri" target="blank">https://www.jstor.org/stable/2088328</a></p>
+<p>Fuchs, Victor R. (1975) A Note on Sex Segregation in Professional Occupations. 
+Explorations in Economic Research, Vol. 2, No. 1 <a href="https://www.nber.org/system/files/chapters/c7405/c7405.pdf">
+https://www.nber.org/system/files/chapters/c7405/c7405.pdf</a></p>
 <p>Uchikoshi, Fumiya, Ryota Mugiyama, and Megumi Oguro. (2020) "Still Separate in STEM?: 
 Trends in Sex Segregation by Field of Study in Japan, 1975-2019." 
 <a href="https://osf.io/txqka/download" class="uri" target="blank">https://osf.io/txqka/download</a></p>
