add description to harmonizing

--- a/basic/Harmonizing_1985_2005_occupation_data.html
+++ b/basic/Harmonizing_1985_2005_occupation_data.html
@@ -15,11 +15,29 @@ integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="ano
 integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]-->    
 </head>
 <body>
-<h1>Harmonizing 1985-2005 occupation classifications</h1>
+<h1>Harmonizing 1985-2005 occupation classifications used in Japan's Population Census</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 23 November 2021</p>
 <main>
 <p>The occupational classifications used in the 1985, 1990, 1995, 2000 and 2005 population censuses 
-are slightly different. </p>
+slightly differ. In order to compare gender segregation by occupation over this time span, Uchikoshi and 
+Mugiyama (2020) report harmonizing classifications for the 1980 though 2005 population censuses. </p>
+<ul>
+<p>Desired features of coding</p>
+<li>No leading zeros so that sorting as numbers and sorting as text produce the same results</li>
+<li>Maintain same ordering as 2005 population census.</li>
+<li>Enable "group by" aggregation of detailed occupations to produce mid-level and top level 
+occupation class totals.</li>
+<li>Codes of "not otherwise classified" categories end in "99".</li>
+</ul>
 </main>
+<div id="references" class="section level2">
+<h2 class="hasAnchor">
+<a href="#references" class="anchor"></a>References</h2>
+<p>Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
+  A Decomposition Analysis of Census Data, 1980-2005. 
+Japanese Journal of Population Studies. 2020. 56. 9-23 
+<a href="https://doi.org/10.24454/jps.1901001" class="uri">https://doi.org/10.24454/jps.1901001</a></p>
+</div>
+</body>
 </html>
