--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ businesses, and employed by others. This may be useful in looking a occupations 
 of self-employment are of interest.</p>
 <ol>
 <li>
-<h4><a href="basic/Harmonizing_1995_2000_2005_occupation_data.html">Harmonizing 1995, 2000 and 2005 occupation classifications</a></h4>
+<h4><a href="basic/Harmonizing_1985_2005_occupation_data.html">
+Harmonizing 1985-2005 occupation classifications</a></h4>
 <p>The occupational classification used in the 2005 population census is slightly different from that used for the 1995 
 and 2000 censuses. These must be harmonized before they can be compared using Elbers's R package.</p>
 </li>
@@ -57,6 +58,11 @@ and 2000 censuses. These must be harmonized before they can be compared using El
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
 <a href="#references" class="anchor"></a>References</h2>
+<p>Brinton, Mary C., and Hang-Yue Ngo. “Age and Sex in the Occupational Structure: 
+A United States-Japan Comparison.” Sociological Forum, 
+vol. 8, no. 1, [Wiley, Springer], 1993, pp. 93–111, 
+<a href="http://www.jstor.org/stable/684286" class="uri">
+http://www.jstor.org/stable/684286</a>.</p>
 <p>Duncan, Otis Dudley and Duncan, Beverly (1955) A Methodological Analysis of Segregation Indexes.
 American Sociological Review, 20（2）, pp.210–217. 
 <a href="https://www.jstor.org/stable/2088328" class="uri">https://www.jstor.org/stable/2088328</a></p>
