--- a/basic/OccupationGenderDuncanWalkthrough.html
+++ b/basic/OccupationGenderDuncanWalkthrough.html
@@ -29,6 +29,10 @@ class="uri" target="blank">https://www.jstor.org/stable/2088328</a></p>
 <p>Fuchs, Victor R. (1975) A Note on Sex Segregation in Professional Occupations. 
 Explorations in Economic Research, Vol. 2, No. 1 <a href="https://www.nber.org/system/files/chapters/c7405/c7405.pdf">
 https://www.nber.org/system/files/chapters/c7405/c7405.pdf</a></p>
+<p>Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
+  A Decomposition Analysis of Census Data, 1980-2005. 
+Japanese Journal of Population Studies. 2020. 56. 9-23 
+<a href="https://doi.org/10.24454/jps.1901001" class="uri">https://doi.org/10.24454/jps.1901001</a></p>
 <p>Uchikoshi, Fumiya, Ryota Mugiyama, and Megumi Oguro. (2020) "Still Separate in STEM?: 
 Trends in Sex Segregation by Field of Study in Japan, 1975-2019." 
 <a href="https://osf.io/txqka/download" class="uri" target="blank">https://osf.io/txqka/download</a></p>
