--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@ using Japanese population census data</a></h4>
 that steps through the main features of his package. This basic walkthrough uses data on occupation versus gender from 
 the 1995 and 2000 Japan Population Censuses.</p>
 </li>
-<li><h4><a href="basic/OccupationGenderDuncanWalkthrough.html">Basic walkthrough of Duncan dissimilarity 
-index using OasisR package</a></h4>
-<p>The Duncan dissimilarity index is the most widely use segregation measure in sociology and is used 
-in recently published research on occupation and gender in Japan (Uchikoshi and Mugiyama, 2020).</p></li>
 </ol>
 </li>
 <li>
-<h4>Expand occupation vs gender analysis to include 2005 population census data</h4>
-<p>The Statistics Bureau of Japan (SBJ) provides occupation vs gender data from 1995 and 2000 population censuses 
+<h4>Reproduction of Uchikoshi and Mugiyama (2020) with extension</h4>
+<p>Brinton and Ngo (1993) published a landmark study of gender and occupation in Japan, in particularly
+highlighting how women returning to the manufacturing workforce after childrearing masks . Uchikoshi 
+  and Mugiyama (2020) 
+</p>
+<!--<p>The Statistics Bureau of Japan (SBJ) provides occupation vs gender data from 1995 and 2000 population censuses 
 in combined tables that have national totals only. Released data for the 2005 population censuses additionally details 
 this data by prefecture and a few major cities. It doesn't get us to Tsukuba, but at it does let us look at Ibaraki 
 prefecture. In addition, the data breaks out occupations by whether the respondents are self-employed, employed in family 
 businesses, and employed by others. This may be useful in looking a occupations in which free-lancing and other forms 
-of self-employment are of interest.</p>
+of self-employment are of interest.</p>-->
 <ol>
 <li>
 <h4><a href="basic/Harmonizing_1985_2005_occupation_data.html">
