add getting the data page

--- a/basic/Harmonizing_1985_2005_occupation_data.html
+++ b/basic/Harmonizing_1985_2005_occupation_data.html
@@ -19,9 +19,8 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 26 November 2021</p>
 <main>
-<p>The occupational classifications used in the 1985, 1990, 1995, 2000 and 2005 population censuses 
-slightly differ. In order to compare gender segregation by occupation over this time span, Uchikoshi and 
-Mugiyama (2020) report harmonizing classifications for the 1980 though 2005 population censuses. </p>
+<p>The occupational classifications used in the population censuses carried out between 1985 and 2005
+slightly differ. </p>
 <ul>
 <p>Desired features of coding</p>
 <li>No leading zeros so that sorting as numbers and sorting as text produce the same results</li>
