--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@ the 1995 and 2000 Japan Population Censuses.</p>
 </li>
 <li>
 <h4>Reproduction of Uchikoshi and Mugiyama (2020) with extension</h4>
-<p>Brinton and Ngo (1993) published a landmark study of gender and occupation in Japan, in particularly
-highlighting how women returning to the manufacturing workforce after childrearing masks . Uchikoshi 
-  and Mugiyama (2020) 
+<p>Brinton and Ngo (1993) published a landmark study of gender and occupation in Japan. Uchikoshi 
+  and Mugiyama (2020) look at subsequent trends at a more detailed minor occupation level. The latter 
+  constructed a harmonized occuplation classification that covers Japanese population censuses 
+  that were conducted between 1980 and 2005, and rely mainly on the Duncan dissimilarity index 
+  as their measure of segregation. The objective of this subproject is to partially reproduce the Uchikoshi 
+  and Mugiyama (2020) results, then compare them to results using Elbers's decomposition.
 </p>
 <!--<p>The Statistics Bureau of Japan (SBJ) provides occupation vs gender data from 1995 and 2000 population censuses 
 in combined tables that have national totals only. Released data for the 2005 population censuses additionally details 
@@ -48,8 +51,8 @@ of self-employment are of interest.</p>-->
 <li>
 <h4><a href="basic/Harmonizing_1985_2005_occupation_data.html">
 Harmonizing 1985-2005 occupation classifications</a></h4>
-<p>The occupational classification used in the 2005 population census is slightly different from that used for the 1995 
-and 2000 censuses. These must be harmonized before they can be compared using Elbers's R package.</p>
+<p>The objective is to create a harmonized occupation index covering population censuses between 1985 and 2005. I omit 
+  the 1980 census because it is available only in PDF image format.</p>
 </li>
 </ol>
 </li>
