add time series dataset list image

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -19,6 +19,21 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 29 November 2021</p>
 <main>
+<article>
+    <p>Several time series datasets covering labor force status and employment are at 
+ <a href="https://www.e-stat.go.jp/stat-search/files?page=1&layout=datalist&toukei=00200521&tstat=000001011777&cycle=0&tclass1=000001011807&tclass2val=0"></a>.
+The database giving national population totals by minor occupation, employment status and gender for persons 
+aged 15 and older are in Table 9 at the very bottom of this page. The link takes you to 
+<a href="https://www.e-stat.go.jp/stat-search/database?page=1&layout=datalist&stat_infid=000001086332">a list of 
+datasets</a> for censuses carried out between 1985 and 2015. </p>
+<figure>
+    <img src="images/OccupationTimeSeriesDataList.png"
+          loading="lazy" alt="Time series dataset list" width="600" height="400" />
+        <figcaption>
+          Time series dataset list</a>.
+        </figcaption>
+</figure>
+</article>
 </main>
 </body>
 </html>
