--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ prefecture. In addition, the data breaks out occupations by whether the responde
 businesses, and employed by others. This may be useful in looking a occupations in which free-lancing and other forms 
 of self-employment are of interest.</p>-->
 <ol>
+  <li><h4><a href="basic/GettingTheData.html">Getting the data for harmonizing 1985-2005 occupation classifications</a></h4>
+  <p>A step by step guide to downloading occupation and gender data from Japanese population censuses.</p></li>
 <li>
 <h4><a href="basic/Harmonizing_1985_2005_occupation_data.html">
 Harmonizing 1985-2005 occupation classifications</a></h4>
