--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -20,8 +20,10 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 29 November 2021</p>
 <main>
 <article>
-    <p>Several time series datasets covering labor force status and employment are at 
- <a href="https://www.e-stat.go.jp/stat-search/files?page=1&layout=datalist&toukei=00200521&tstat=000001011777&cycle=0&tclass1=000001011807&tclass2val=0"></a>.
+    <p>Several time series datasets covering labor force status and employment are the  
+ <a href="https://www.e-stat.go.jp/stat-search/files?page=1&layout=datalist&toukei=00200521&tstat=000001011777&cycle=0&tclass1=000001011807&tclass2val=0">
+     e-Stat website
+ </a>.
 The database giving national population totals by minor occupation, employment status and gender for persons 
 aged 15 and older are in Table 9 at the very bottom of this page. The link takes you to 
 <a href="https://www.e-stat.go.jp/stat-search/database?page=1&layout=datalist&stat_infid=000001086332">a list of 
