add occupation table

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -25,7 +25,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
      e-Stat website
  </a>.
 The database giving national population totals by minor occupation, employment status and gender for persons 
-aged 15 and older are in Table 9 at the very bottom of this page. The link takes you to 
+aged 15 and older are in Table 9 at the very bottom of that page. The link takes you to 
 <a href="https://www.e-stat.go.jp/stat-search/database?page=1&layout=datalist&stat_infid=000001086332">a list of 
 datasets</a> for censuses carried out between 1985 and 2015. </p>
 <figure>
@@ -33,6 +33,18 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
           loading="lazy" alt="Time series dataset list" width="600" height="400" />
         <figcaption>
           Time series dataset list</a>.
+        </figcaption>
+</figure>
+<p>Clicking on the DB link displays the full table. The left column lists the occupations at the major, mid and minor 
+    class levels. The next set of 7 columns gives population numbers by occupation status for both genders. The next 
+    set of 7 columns gives the numbers for males followed by the numbers for females. To select items for download, 
+    click in the red box at upper left.
+</p>
+<figure>
+    <img src="images/OccupationTable.png"
+          loading="lazy" alt="Occupation table" width="600" height="400" />
+        <figcaption>
+          Occupation table</a>.
         </figcaption>
 </figure>
 </article>
