add data item selection panel

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -36,7 +36,9 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
         </figcaption>
 </figure>
 <p>Clicking on the DB link displays the full table. The left column lists the occupations at the major, mid and minor 
-    class levels. The next set of 7 columns gives population numbers by occupation status for both genders. The next 
+    class levels. The next set of 7 columns gives population numbers by occupation status for both genders: total, 
+    employees, officers, self-employed with employees, self-employed without employees, unpaid employees of family 
+    businesses and household workers. The next 
     set of 7 columns gives the numbers for males followed by the numbers for females. To select items for download, 
     click in the red box at upper left.
 </p>
@@ -45,6 +47,16 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
           loading="lazy" alt="Occupation table" width="600" height="400" />
         <figcaption>
           Occupation table</a>.
+        </figcaption>
+</figure>
+<p>The data item selection panel has 5 rows in this case. For this task, I will select only the total occupation status numbers 
+    (row 2), male and female (row 3), and the minor occupations (row 4). Click on the button at the right of row 2.
+</p>
+<figure>
+    <img src="images/DataItemSelection.png"
+          loading="lazy" alt="Data item selection" width="600" height="400" />
+        <figcaption>
+            Data item selection</a>.
         </figcaption>
 </figure>
 </article>
