--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -59,7 +59,16 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Data item selection</a>.
         </figcaption>
 </figure>
-</article>
+<p>The popup displays with all items selected. Deselect all by clicking on the 
+    reverse button at lower right, then select totals as indicated by the arrow at left.
+</p>
+<figure>
+    <img src="images/OccupationStatusItemSelection1.png"
+          loading="lazy" alt="Occupation status item selection" width="600" height="400" />
+        <figcaption>
+            Occupation status item selection</a>.
+        </figcaption>
+</figure></article>
 </main>
 </body>
 </html>
