add confirm arrow

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -60,7 +60,8 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
         </figcaption>
 </figure>
 <p>The popup displays with all items selected. Deselect all by clicking on the 
-    reverse button at lower right, then select totals as indicated by the arrow at left.
+    reverse button at lower right, then select totals as indicated by the arrow at left. 
+    Finally click on the confirm button at bottom.
 </p>
 <figure>
     <img src="images/OccupationStatusItemSelection1.png"
