add gender selection

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -65,11 +65,20 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
 </p>
 <figure>
     <img src="images/OccupationStatusItemSelection1.png"
-          loading="lazy" alt="Occupation status item selection" width="600" height="400" />
+          loading="lazy" alt="Occupation status item selection" width="600" height="500" />
         <figcaption>
             Occupation status item selection</a>.
         </figcaption>
-</figure></article>
+</figure>
+<p>Repeat this to deselect gender by clicking on the button at the right of row 3.</p>
+<figure>
+    <img src="images/GenderSelection.png"
+          loading="lazy" alt="Gender selection" width="600" height="500" />
+        <figcaption>
+            Gender selection</a>.
+        </figcaption>
+</figure>
+</article>
 </main>
 </body>
 </html>
