correct deselect gender description

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -70,7 +70,9 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Occupation status item selection</a>.
         </figcaption>
 </figure>
-<p>Repeat this to deselect gender by clicking on the button at the right of row 3.</p>
+<p>Repeat this to deselect gender by clicking on the button at the right of row 3. Deselect 
+    the top item and click on confirm.
+</p>
 <figure>
     <img src="images/GenderSelection.png"
           loading="lazy" alt="Gender selection" width="600" height="500" />
