--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -80,6 +80,27 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Gender selection</a>.
         </figcaption>
 </figure>
+<figure>
+    <img src="images/OccupationSelection1.png"
+          loading="lazy" alt="Occupation selection (panel 1)" width="600" height="500" />
+        <figcaption>
+            Occupation selection (panel 1)</a>.
+        </figcaption>
+</figure>
+<figure>
+    <img src="images/OccupationSelection2.png"
+          loading="lazy" alt="Occupation selection (panel 2)" width="600" height="500" />
+        <figcaption>
+            Occupation selection (panel 1)</a>.
+        </figcaption>
+</figure>
+<figure>
+    <img src="images/OccupationSelection3.png"
+          loading="lazy" alt="Occupation selection (panel 3)" width="600" height="500" />
+        <figcaption>
+            Occupation selection (panel 3)</a>.
+        </figcaption>
+</figure>
 </article>
 </main>
 </body>
