--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -87,11 +87,13 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Occupation selection (panel 1)</a>.
         </figcaption>
 </figure>
+<blockquote>
+<p><b>TIP:</b></p>
 <figure>
     <img src="images/OccupationSelection2.png"
           loading="lazy" alt="Occupation selection (panel 2)" width="600" height="500" />
         <figcaption>
-            Occupation selection (panel 1)</a>.
+            Occupation selection (panel 2)</a>.
         </figcaption>
 </figure>
 <figure>
@@ -101,6 +103,7 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Occupation selection (panel 3)</a>.
         </figcaption>
 </figure>
+</blockquote>
 </article>
 </main>
 </body>
