--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <h1>Tsukuba and Segregation</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 16 November 2021</p>
-<div class="abstract"><p>Objective: Apply Elbers decomposition method to segregation in and around Tsukuba.
+<div class="abstract"><p>Objective: Apply segregation statistics to government data around and about Tsukuba.
 </p>
   <p class="abstract">A recently published decomposition method (Elbers, 2021) enables changes in segregation to be decomposed into changes resulting from new units (for example, occupations), disappearing units, changes in groups (for example, gender), changes in units, and structural changes. Elbers has released an R package with clearly written vignette and 
-  documentation. This project will apply this method to Tsukuba and its surroundings using readily available census and other government statistics.</p>
+  documentation. This project will apply this and other segregation statistics methods to Tsukuba and its surroundings using readily available census and other government statistics.</p>
 </div>
 <main>
 <ol>
