add occupation selection description

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -80,6 +80,13 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Gender selection</a>.
         </figcaption>
 </figure>
+<p>Selecting occupations is a bit more complicated. When the occupation panel is selected by clicking 
+    on the button in row 4 of the data item selection panel, the panel displays a hierarchical tree 
+    of the occupation catagories. Each level can be selected with two clicks by selecting one member 
+    of that level (1), then clicking on the button at 2. This selects all in that level. (You can 
+    deselect all in the level by clicking on the button to the right of the select button.) However, see 
+    the TIP below for a quirk found in some years.
+</p>
 <figure>
     <img src="images/OccupationSelection1.png"
           loading="lazy" alt="Occupation selection (panel 1)" width="600" height="500" />
@@ -88,7 +95,7 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
         </figcaption>
 </figure>
 <blockquote>
-<p><b>TIP:</b></p>
+<p><b>TIP: </b></p>
 <figure>
     <img src="images/OccupationSelection2.png"
           loading="lazy" alt="Occupation selection (panel 2)" width="600" height="500" />
