Occupation selection panel tip

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -85,7 +85,7 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
     of the occupation catagories. Each level can be selected with two clicks by selecting one member 
     of that level (1), then clicking on the button at 2. This selects all in that level. (You can 
     deselect all in the level by clicking on the button to the right of the select button.) However, see 
-    the TIP below for a quirk found in some years.
+    the TIP below for a quirk found for some years.
 </p>
 <figure>
     <img src="images/OccupationSelection1.png"
@@ -95,7 +95,9 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
         </figcaption>
 </figure>
 <blockquote>
-<p><b>TIP: </b></p>
+<p><b>TIP: </b>For years 2005 and 2010, the submajor classes I-1, I-2 and I-3 are inserted under 
+their major class I. This pushes the mid and minor layers down one level, so that selecting all of the 
+minor categories at top select the mid layer under I (panel 2). </p>
 <figure>
     <img src="images/OccupationSelection2.png"
           loading="lazy" alt="Occupation selection (panel 2)" width="600" height="500" />
@@ -103,6 +105,9 @@ datasets</a> for censuses carried out between 1985 and 2015. </p>
             Occupation selection (panel 2)</a>.
         </figcaption>
 </figure>
+<p>To correctly select the minor layers under I, you can select the underlying minor layers as above, but 
+    have to deselect the mid layer item by item.
+</p>
 <figure>
     <img src="images/OccupationSelection3.png"
           loading="lazy" alt="Occupation selection (panel 3)" width="600" height="500" />
