add confirm data item selection

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -116,6 +116,15 @@ minor categories at top select the mid layer under I (panel 2). </p>
         </figcaption>
 </figure>
 </blockquote>
+<p>After completing these selections, we have 1/7 occupation status item, 2/3 gender items and 274/349 minor level occupations. 
+    Reflecting slightly varying occupation classifications, this latter number may vary by census year.
+</p>
+<p>Click on "confirm (確認)" to complete and close this panel.</p>
+<figure>
+    <img src="images/DataItemSelection2.png"
+          loading="lazy" alt="Confirm data item selection" width="600" height="500" />
+        <figcaption>Confirm data item selection</figcaption>
+</figure>
 </article>
 </main>
 </body>
