--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -125,6 +125,23 @@ minor categories at top select the mid layer under I (panel 2). </p>
           loading="lazy" alt="Confirm data item selection" width="600" height="500" />
         <figcaption>Confirm data item selection</figcaption>
 </figure>
+<p>The main table now has male and female totals by minor occupation. Click on the download button at upper right 
+    <img src="images/downloadbutton.PNG" />.
+</p>
+<figure>
+    <img src="images/FinalTable.png"
+          loading="lazy" alt="Main table after data item selection" width="500" height="700" />
+        <figcaption>Main table after data item selection</figcaption>
+</figure>
+<p>The download format panel lets you select wide CSV, long CSV, or wide XLSX format. Wide CSV is the default. 
+    Click on the download button at bottom 
+    <img src="images/downloadbutton.PNG" /> to save your selected data.
+</p>
+<figure>
+    <img src="images/DownloadPanel.PNG"
+          loading="lazy" alt="Download format panel" width="600" height="1000" />
+        <figcaption>Download format panel</figcaption>
+</figure>
 </article>
 </main>
 </body>
