fix inline style

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -125,11 +125,11 @@ minor categories at top select the mid layer under I (panel 2). </p>
           loading="lazy" alt="Confirm data item selection" width="600" height="500" />
         <figcaption>Confirm data item selection</figcaption>
 </figure>
-<p>The main table now has male and female totals by minor occupation. Click on the download button at upper right 
+<p style="display: inline-block;">The main table now has male and female totals by minor occupation. Click on the download button at upper right 
     <img src="images/downloadbutton.PNG" />.
 </p>
 <figure>
-    <img src="images/FinalTable.png"
+    <img src="images/FinalTable.PNG"
           loading="lazy" alt="Main table after data item selection" width="500" height="700" />
         <figcaption>Main table after data item selection</figcaption>
 </figure>
