fix inline image elements

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -125,8 +125,8 @@ minor categories at top select the mid layer under I (panel 2). </p>
           loading="lazy" alt="Confirm data item selection" width="600" height="500" />
         <figcaption>Confirm data item selection</figcaption>
 </figure>
-<p style="display: inline-block;">The main table now has male and female totals by minor occupation. Click on the download button at upper right 
-    <img src="images/downloadbutton.PNG" />.
+<p >The main table now has male and female totals by minor occupation. Click on the download button at upper right 
+    <img src="images/downloadbutton.PNG" width=80 height=30  style="display: inline-block;"/>.
 </p>
 <figure>
     <img src="images/FinalTable.PNG"
@@ -135,7 +135,7 @@ minor categories at top select the mid layer under I (panel 2). </p>
 </figure>
 <p>The download format panel lets you select wide CSV, long CSV, or wide XLSX format. Wide CSV is the default. 
     Click on the download button at bottom 
-    <img src="images/downloadbutton.PNG" /> to save your selected data.
+    <img src="images/downloadbutton.PNG" width=80 height=30  style="display: inline-block;"/> to save your selected data.
 </p>
 <figure>
     <img src="images/DownloadPanel.PNG"
