add link to data file

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -17,7 +17,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <body>
 <h1>Getting the data for harmonizing 1985-2005 occupation classifications</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-29 November 2021</p>
+30 November 2021</p>
 <main>
 <article>
     <p>Several time series datasets covering labor force status and employment are the  
@@ -142,6 +142,8 @@ minor categories at top select the mid layer under I (panel 2). </p>
           loading="lazy" alt="Download format panel" width="600" height="1000" />
         <figcaption>Download format panel</figcaption>
 </figure>
+<p>The resulting dataset can be downloaded <a href="../inst/extdata/2005_totals_minor_occupations.csv">here</a>.
+(If your browser attempts to retype this as an xls file, force the type back to csv.) </p>
 </article>
 </main>
 </body>
