--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ of self-employment are of interest.</p>-->
 <ol>
   <li><h4><a href="basic/GettingTheData.html">Getting the data for harmonizing 1985-2005 occupation classifications</a></h4>
   <p>A step by step guide to downloading occupation and gender data from Japanese population censuses.</p></li>
+  <li><h4><a href="basic/PreprocessingTheData.html">Preprocessing the data</a></h4>
+  <p>Data downloaded from e-Stat usually must be processed before it can be incorporated into statistics 
+    packages or, in this case, used for harmonizing the occupation classifications. Instead of the 2005 data 
+    downloaded in the previous step, here I use 2000 data because it has a "feature" that is not in the 2005 data and 
+    must be corrected.
+  </p></li>
 <li>
 <h4><a href="basic/Harmonizing_1985_2005_occupation_data.html">
 Harmonizing 1985-2005 occupation classifications</a></h4>
