add 2000 data link

--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -143,7 +143,9 @@ minor categories at top select the mid layer under I (panel 2). </p>
         <figcaption>Download format panel</figcaption>
 </figure>
 <p>The resulting dataset can be downloaded <a href="../inst/extdata/2005_totals_minor_occupations.csv">here</a>.
-(If your browser attempts to retype this as an xls file, force the type back to csv.) </p>
+(If your browser attempts to retype this as an xls file, force the type back to csv.) The next page 
+on preprocessing the data uses a similarly 
+<a href="../inst/extdata/2000_totals_minor_occupations.csv">downloaded file with 2000 data</a>.</p>
 </article>
 </main>
 </body>
